fix: align footer correctly

--- a/app/ui/Footer.module.css
+++ b/app/ui/Footer.module.css
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: row;
   gap: 13px;
+  padding: 0;
 }
 
 .footer > ul.links > a {
